--- a/common/src/main/res/values/style.xml
+++ b/common/src/main/res/values/style.xml
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowBackground">#0000</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
-
 </resources>
