--- a/solutionprovider/src/main/res/layout/bottom_layout.xml
+++ b/solutionprovider/src/main/res/layout/bottom_layout.xml
@@ -29,6 +29,7 @@
         android:paddingBottom="10dp"
        />
     <TextView
+        android:id="@+id/set_btn"
         android:layout_width="164dp"
         android:layout_height="98dp"
         android:background="@drawable/btn_main_setting"
