--- a/solutionprovider/src/main/res/layout/fs_first_pager_view.xml
+++ b/solutionprovider/src/main/res/layout/fs_first_pager_view.xml
@@ -10,6 +10,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/app_list_tv"
             android:layout_width="83dp"
             android:layout_height="87dp"
             android:background="@drawable/btn_one_apps"
