--- a/solutionprovider/src/main/res/layout/activity_app_list.xml
+++ b/solutionprovider/src/main/res/layout/activity_app_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.AppListActivity">
-    <androidx.viewpager.widget.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
